fix padding on smaller devices when notif bar is visible

--- a/assets/sass/_site-containers.scss
+++ b/assets/sass/_site-containers.scss
@@ -4,6 +4,14 @@
 
     .has-notification-bar & {
         padding-top: 103px;
+
+        @include media($screen-xl) {
+            padding-top: 153px;
+        }
+
+        @include media($screen-sm) {
+            padding-top: 0;
+        }
     }
 }
 
